--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 @layer utilities {
+  body {
+    @apply bg-cream
+  }
+
   .text-balance {
     text-wrap: balance;
   }
+
+  h1 {
+    @apply font-canela text-4xl md:text-[150px] leading-none
+  }
+
+  .big-text {
+    @apply text-4xl md:text-8xl
+  }
+
+  .link-button {
+    @apply font-neue rounded-full py-2 px-2 pl-4 border font-extralight
+  }
+
 }
